/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/GUIForms/JFrame.java to edit this template
 */
package mvc.view;

import mvc.controller.LoginCntl;

/**
 *
 * @author bryce
 */
public class LoginView extends javax.swing.JFrame {
	
	private LoginCntl loginCntl;
	
	/**
	 * Creates new form LoginUI
	 */
	public LoginView(LoginCntl loginCntl) {
		this.loginCntl = loginCntl;
		initComponents();
	}

	/**
	 * This method is called from within the constructor to initialize the
	 * form. WARNING: Do NOT modify this code. The content of this method is
	 * always regenerated by the Form Editor.
	 */
	@SuppressWarnings("unchecked")
        // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
        private void initComponents() {

                loginButton = new javax.swing.JButton();
                createAccountButton = new javax.swing.JButton();
                quitButton = new javax.swing.JButton();
                usernameLabel = new javax.swing.JLabel();
                passwordLabel = new javax.swing.JLabel();
                usernameField = new javax.swing.JTextField();
                passwordField = new javax.swing.JTextField();
                titleLabel = new javax.swing.JLabel();

                setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);

                loginButton.setText("Login");
                loginButton.addActionListener(new java.awt.event.ActionListener() {
                        public void actionPerformed(java.awt.event.ActionEvent evt) {
                                loginButtonActionPerformed(evt);
                        }
                });

                createAccountButton.setText("Create Account");
                createAccountButton.addActionListener(new java.awt.event.ActionListener() {
                        public void actionPerformed(java.awt.event.ActionEvent evt) {
                                createAccountButtonActionPerformed(evt);
                        }
                });

                quitButton.setText("Quit");
                quitButton.addActionListener(new java.awt.event.ActionListener() {
                        public void actionPerformed(java.awt.event.ActionEvent evt) {
                                quitButtonActionPerformed(evt);
                        }
                });

                usernameLabel.setText("Username:");

                passwordLabel.setText("Password:");

                titleLabel.setText("Login");

                javax.swing.GroupLayout layout = new javax.swing.GroupLayout(getContentPane());
                getContentPane().setLayout(layout);
                layout.setHorizontalGroup(
                        layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                        .addGroup(layout.createSequentialGroup()
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                        .addGroup(layout.createSequentialGroup()
                                                .addGap(49, 49, 49)
                                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                                        .addComponent(passwordLabel)
                                                        .addComponent(usernameLabel)
                                                        .addComponent(loginButton))
                                                .addGap(49, 49, 49)
                                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                                        .addGroup(layout.createSequentialGroup()
                                                                .addComponent(createAccountButton)
                                                                .addGap(39, 39, 39)
                                                                .addComponent(quitButton))
                                                        .addGroup(layout.createSequentialGroup()
                                                                .addGap(49, 49, 49)
                                                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                                                                        .addComponent(passwordField, javax.swing.GroupLayout.PREFERRED_SIZE, 160, javax.swing.GroupLayout.PREFERRED_SIZE)
                                                                        .addComponent(usernameField, javax.swing.GroupLayout.PREFERRED_SIZE, 160, javax.swing.GroupLayout.PREFERRED_SIZE)))))
                                        .addGroup(layout.createSequentialGroup()
                                                .addGap(187, 187, 187)
                                                .addComponent(titleLabel)))
                                .addContainerGap(57, Short.MAX_VALUE))
                );
                layout.setVerticalGroup(
                        layout.createParallelGroup(javax.swing.GroupLayout.Alignment.LEADING)
                        .addGroup(javax.swing.GroupLayout.Alignment.TRAILING, layout.createSequentialGroup()
                                .addContainerGap()
                                .addComponent(titleLabel)
                                .addGap(67, 67, 67)
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                                        .addComponent(usernameLabel)
                                        .addComponent(usernameField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                                .addGap(34, 34, 34)
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                                        .addComponent(passwordLabel)
                                        .addComponent(passwordField, javax.swing.GroupLayout.PREFERRED_SIZE, javax.swing.GroupLayout.DEFAULT_SIZE, javax.swing.GroupLayout.PREFERRED_SIZE))
                                .addPreferredGap(javax.swing.LayoutStyle.ComponentPlacement.RELATED, 68, Short.MAX_VALUE)
                                .addGroup(layout.createParallelGroup(javax.swing.GroupLayout.Alignment.BASELINE)
                                        .addComponent(loginButton)
                                        .addComponent(createAccountButton)
                                        .addComponent(quitButton))
                                .addGap(37, 37, 37))
                );

                pack();
        }// </editor-fold>//GEN-END:initComponents

        private void createAccountButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_createAccountButtonActionPerformed
		loginCntl.showCreateAccountUI(true);
		loginCntl.showLoginUI(false);
        }//GEN-LAST:event_createAccountButtonActionPerformed

        private void quitButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_quitButtonActionPerformed
		loginCntl.closeDatabaseConnection();
		System.exit(0);
        }//GEN-LAST:event_quitButtonActionPerformed

        private void loginButtonActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_loginButtonActionPerformed
                loginCntl.authenticate(usernameField.getText(), passwordField.getText());
        }//GEN-LAST:event_loginButtonActionPerformed

        // Variables declaration - do not modify//GEN-BEGIN:variables
        private javax.swing.JButton createAccountButton;
        private javax.swing.JButton loginButton;
        private javax.swing.JTextField passwordField;
        private javax.swing.JLabel passwordLabel;
        private javax.swing.JButton quitButton;
        private javax.swing.JLabel titleLabel;
        private javax.swing.JTextField usernameField;
        private javax.swing.JLabel usernameLabel;
        // End of variables declaration//GEN-END:variables
}
